apps/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  selector:
    app: portfolio
  ports:
    - name: http
      port: 80
      targetPort: http
